# cuVSLAM

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN_CONCEPTS.md  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  build_docs.sh  build_release.sh  fetch_external_sources.sh
.github/: CODEOWNERS
.github/rulesets/: default-branch-ruleset.json
.github/workflows/: nightly.yml  pr-verify.yml  provision-datasets.yml  sync-rulesets.yml
cmake/: FindExt.cmake  cuVSLAMUtils.cmake  use_offline_externals.cmake
cmake/ext/: cunls.cmake  libjpeg.cmake  rerun.cmake  yaml-cpp.cmake
cuvslam-skills/: README.md
cuvslam-skills/cuvslam-ci/: SKILL.md  reference.md
cuvslam-skills/cuvslam-onboard/: SKILL.md
cuvslam-skills/cuvslam-troubleshoot/: SKILL.md
doc/: Doxyfile.in  index.md  load_map.md  load_map_mermaid.md
examples/: README.md  requirements.txt
examples/euroc/: README.md  track_euroc.py
examples/kitti/: README.md  track_kitti.py  track_kitti_masks.py  track_kitti_slam.py
examples/multicamera_edex/: track_multicamera_r2b.py  track_multicamera_tartan.py
examples/multisensor/: README.md  dataset_utils.py  download_tartan.py  tartan_ground.edex  track_multisensor_tartan.py
examples/realsense/: README.md  run_multisensor.py  run_vio.py  visualizer.py
examples/tum/: track_tum.py
examples/zed/: README.md
libs/camera/: camera.cpp  camera.h  frustum_intersection_graph.cpp  frustum_intersection_graph.h
libs/camera_rig_edex/: blackout_oscillator_filter.cpp  camera_rig_edex.cpp  camera_rig_edex.h  repeated_camera_rig_edex.cpp  shuttle_camera_rig_edex.cpp
libs/common/: CMakeLists.txt  coordinate_system.cpp  coordinate_system.h  image.h  image_dropper.h  parse_utils.cpp  parse_utils.h  rotation_utils.h  stream.h
libs/cuda_modules/: cuda_helper.h  image_cast.cpp  selection_v2.cpp
libs/cuvslam/: CMakeLists.txt  cuvslam2.cpp  cuvslam2.h  cuvslam2_internal.h  debug_dump.cpp  ground_constraint2.cpp  internal.h
libs/edex/: edex_internal.h  edex_types.h
libs/epipolar/: camera_projection.cpp  camera_projection.h  camera_selection.h  resectioning_utils.cpp  resectioning_utils_internal.h
libs/imu/: CMakeLists.txt  gyro_bias_nec.cpp  gyro_bias_nec.h  imu_preintegration.cpp  imu_preintegration.h  imu_sba_fixed_vel.cpp  imu_sba_gpu.h  imu_sba_gpu_fixed_vel.cpp  imu_sba_problem.cpp  imu_sba_problem.h  inertial_optimization.cpp  inertial_optimization.h  soft_inertial_pnp.cpp  soft_inertial_pnp.h
libs/launcher/: CMakeLists.txt  README.md  base_launcher.cpp  base_launcher.h  launch_load_and_localize.cpp  launch_load_and_localize.h  launcher_create.cpp  monocular_launcher.cpp  monocular_launcher.h  multi_camera_launcher.cpp  multi_camera_launcher.h  multi_camera_launcher_base.cpp  multi_camera_launcher_base.h  multisensor_camera_launcher.cpp  multisensor_camera_launcher.h  rgbd_camera_launcher.cpp  rgbd_camera_launcher.h  visual_inertial_launcher.cpp  visual_inertial_launcher.h  visualizer.cpp
libs/map/: CMakeLists.txt  depth_point_map.cpp  depth_point_map.h  map.cpp  map.h  plane_map.cpp  plane_map.h  service.cpp  service.h
libs/map/test/: CMakeLists.txt  depth_point_map_test.cpp  map_test.cpp  plane_map_test.cpp
libs/math/: CMakeLists.txt  pgo.cpp  pgo.h  point_to_plane_factor.h  point_to_point_icp_factor.h  robust_cost_function.cpp  twist.cpp  twist_to_angle.cpp  twist_to_angle.h
libs/odometry/: CMakeLists.txt  ground_integrator.cpp  ground_integrator.h  ivisual_odometry.h  mono_visual_odometry.cpp  mono_visual_odometry.h  multi_visual_odometry_base.cpp  multi_visual_odometry_base.h  multisensor_odometry.cpp  multisensor_odometry.h  rgbd_odometry.cpp  rgbd_odometry.h  (+3 more)
libs/pipelines/: CMakeLists.txt  depth_maps_context.cpp  depth_maps_context.h  feature_predictor.cpp  feature_predictor.h  imu_fusion_context.cpp  imu_fusion_context.h  inertial_pnp.cpp  inertial_pnp.h  sba_mono_wrapper.cpp  service_sba.h  sfm_solver_interface.h  track_lifter.cpp  track_lifter.h  track_online_inertial.cpp  track_online_inertial.h  track_online_multi.cpp  track_online_multi.h  track_online_multisensor.cpp  track_online_multisensor.h  track_online_rgbd.cpp  track_online_rgbd.h  tracker_state_machine.cpp  tracker_state_machine.h  triangulator.cpp  visualizer.cpp  visualizer.h  winsorizer.cpp
libs/pipelines/test/: CMakeLists.txt  track_lifter_test.cpp  tracker_state_machine_test.cpp
libs/pnp/: CMakeLists.txt  lift_tracks.cpp  mono_pnp.cpp  multicam_pnp.cpp  multicam_pnp.h  multisensor_pose_estimator.cpp  multisensor_pose_estimator.h  visual_icp.cpp  visual_icp.h  visualizer.cpp  visualizer.h
libs/pnp/test/: CMakeLists.txt  multisensor_pose_estimator_test.cpp  point_to_point_icp_test.cpp
python/: CMakeLists.txt  __init__.py  cuvslam2.cpp  pyproject.toml  tracker.py  utils.py
scripts/: Dockerfile  Dockerfile.ci  Dockerfile.lint  build_cuvslam_in_docker.sh  build_docs_in_docker.sh  build_pycuvslam_in_docker.sh  check-isolated-ruleset-change.sh  check-workflow-security.sh  check_eval_prerequisites.sh  cuvslam_kpi_report.py  datasets_config.sh  eval_cuvslam_in_docker.sh  junit-to-markdown.py  kpi_baseline_ranges.json  provision_dataset.sh  requirements.txt  run_eval.sh  stage_eval_datasets.sh  test_cuvslam_in_docker.sh  test_pycuvslam_in_docker.sh  verify_pycuvslam_wheel_in_docker.sh
tools/: CMakeLists.txt  ROADMAP.md
tools/python_tools/: README.md  create_env.sh  pyproject.toml
tools/python_tools/cuvslam_tools/bag2edex/: README.md  __init__.py  common.py  rosbag_edex_extraction.py  rosbag_image_extraction.py  rosbag_tf_extraction.py  rosbag_urdf_extraction.py  rosbag_video_extraction.py
tools/python_tools/cuvslam_tools/bag2edex/scripts/: extract_edex.py  extract_images.py  extract_urdf.py  extract_videos.py
tools/python_tools/cuvslam_tools/common/: __init__.py  camera.py  edex.py
tools/python_tools/cuvslam_tools/tests/: README.md  test_edex.py
tools/python_tools/cuvslam_tools/tests/data/: edex  edex_bad  edex_intrinsics
tools/python_tools/cuvslam_tools/undistort/: README.md  __init__.py  input.edex  undistort.py
(+197 files in other folders)
