[build-system]
requires = ["setuptools>=65,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvslam-tools"
version = "0.1.0"
dependencies = [
    "av",
    "jinja2",
    "matplotlib",
    "numpy==2.2.3",
    "scipy==1.15.3",
    "opencv-python==4.11.0.86",
    "pandas",
    "pillow==12.2.0",
    "pyarrow",
    "pydantic",
    "pytransform3d==3.8.0",
    "pyyaml",
    "rerun-sdk",
    "rosbags==0.11.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"cuvslam_tools.bag2edex" = ["configs/*.yaml"]
"cuvslam_tools.undistort" = ["input.edex", "input.png"]

[project.scripts]
rosbag_extract_edex = "cuvslam_tools.bag2edex.scripts.extract_edex:main"
rosbag_extract_images = "cuvslam_tools.bag2edex.scripts.extract_images:main"
rosbag_extract_urdf = "cuvslam_tools.bag2edex.scripts.extract_urdf:main"
rosbag_extract_videos = "cuvslam_tools.bag2edex.scripts.extract_videos:main"
undistort_edex_images = "cuvslam_tools.undistort.undistort:main"
